wiring up friends lists - friend features

--- a/client/src/components/common/css/footer.css
+++ b/client/src/components/common/css/footer.css
@@ -9,7 +9,7 @@ section .section-title {
     text-transform: uppercase;
 }
 #footer {
-    background: #b5008b !important;
+    background: #1E90FF !important;
 }
 #footer h5{
 	padding-left: 10px;
