--- a/client/src/components/navigation/style.css
+++ b/client/src/components/navigation/style.css
@@ -14,3 +14,111 @@
 .pink_button:hover {
 	border: 2px solid purple !important;
 }
+
+.notify-drop {
+	width: 50vw !important;
+	min-width: 50vw !important;
+	background-color: white !important;
+	padding: 20px;
+	margin: auto;
+	-webkit-transform: translateX(-350px); /* 10px to left */
+	-moz-transform: translateX(-350px); /* 10px to left */
+	-ms-transform: translateX(-350px); /* 10px to left */
+	 transform: translateX(-350px); 
+	margin-top: 30px !important;
+	max-height: 500px;
+	overflow-y: scroll;
+	overflow-x: hidden;
+}
+.my-dropdown {
+	box-shadow: 10px 10px 10px grey;
+}
+.item {
+	margin-left: 10px;
+}
+#fb{
+  width:500px;
+  border:1px solid gray;
+  border-radius:5px;
+  position:relative;
+  height:175px;
+}
+#fb p{
+  font-family:sans-serif;
+  margin: 0 0 0 10px;
+  line-height:30px;
+}
+
+#fb-top span{
+  color:#4267B2;
+  float:right;
+  margin-right:10px;
+}
+#fb-top{
+  background-color:#efefef;
+  height:30px;
+  width:500px;
+  border-radius:5px 5px 0 0;
+  position:absolute;
+  top:-1px;
+  left:-1px;
+  border:1px solid gray;
+}
+
+#fb img{
+  position:absolute;
+  left:10px;
+  top:52.5px;
+}
+
+#info{
+  position:absolute;
+  left:120px;
+  top:75px;
+}
+
+#info {
+  color:#4267B2;
+  line-height:25px;
+  font-size:18px;
+}
+
+#info span{
+  color:#777;
+  font-size:14px;
+}
+
+#button-block{
+  position:absolute;
+  right:10px;
+  top:85px;
+}
+
+#button-block div{
+  display:inline-block;
+}
+
+#confirm, #delete{
+  background-color:#4267B2;
+  color:white;
+  padding:7px;
+  border-radius:2px;
+  margin-right:10px;
+  font-family:sans-serif;
+}
+
+#delete{
+  color:#222;
+  background-color:#bbb;
+  border:1px solid #999;
+  padding:6px;
+  margin-right:0;
+}
+
+#button-block div:hover{
+  opacity:.8;
+  cursor:pointer;
+}
+
+
+
