--- a/client/src/components/signupCammer/css/pages.css
+++ b/client/src/components/signupCammer/css/pages.css
@@ -3,7 +3,7 @@
 	overflow-y: scroll;
 	border: 3px solid black;
 	border-radius: 20px;
-	background: #690354;
+	background: #1E90FF;
 	color: white;
 	padding: 10px;
 }
@@ -14,7 +14,7 @@
 	text-align: left;
 }
 .details {
-	background-color: #690354;
+	background-color: #1E90FF;
 	color: white;
 }
 .red {
@@ -23,18 +23,18 @@
 .custom_upload_img {
 	width: 100%; 
 	height: 300px; 
-	box-shadow: 7px 7px 7px pink;
+	box-shadow: 7px 7px 7px grey;
 	border: 2px solid black;
 }
 .custom_upload_img:hover {
 	width: 100%; 
 	height: 300px; 
-	box-shadow: 7px 7px 7px purple;
+	box-shadow: 7px 7px 7px #1E90FF;
 	border: 2px solid black;
 }
 .custom_card_two {
 	height: 100%;
-	background: #690354 !important;
+	background: #1E90FF !important;
 	color: white;
 	margin: 50px 10px 100px 10px;
 }
