wiring up private messaging - completed token payments - sendbird progress 3/10

--- a/client/src/components/navigation/style.css
+++ b/client/src/components/navigation/style.css
@@ -119,6 +119,10 @@
   opacity:.8;
   cursor:pointer;
 }
-
+@media only screen and (max-width: 750px) {
+	.sign-out {
+		margin-bottom: 10px;
+	}
+}
 
 
