--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,10 +1,7 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+html, body {
+	overflow-x: hidden;
+	margin: 0;
+	padding: 0;
 }
 
 code {
@@ -19,4 +16,7 @@ code {
 }
 .hover:hover {
 	cursor: pointer;
+}
+.underline {
+	text-decoration: underline;
 }
