--- a/client/src/components/coins/css/purchase.css
+++ b/client/src/components/coins/css/purchase.css
@@ -109,7 +109,27 @@ section .section-title {
 }
 .custom_body {
     background-color: white;
+    border: 2px solid black;
 }
 #lower {
     margin-top: 300px;
+}
+#jumbo {
+    background-image: linear-gradient(to bottom, rgba(0,0,0,0.6) 0%,rgba(0,0,0,0.6) 100%), url(../../../images/sexy.jpg);
+
+}
+#jumbo .text {
+    padding-top: 150px;
+}
+.bg-cover {
+    background-attachment: static;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 100vh;
+}
+@media only screen and (max-width: 750px) {
+    .bg-cover {
+        height: 100%;
+    }
 }
