--- a/client/src/components/common/css/footer.css
+++ b/client/src/components/common/css/footer.css
@@ -65,9 +65,13 @@ section .section-title {
 
 @media (max-width:767px){
 	#footer h5 {
-    padding-left: 0;
-    border-left: transparent;
-    padding-bottom: 0px;
-    margin-bottom: 10px;
-}
+        padding-left: 0;
+        border-left: transparent;
+        padding-bottom: 0px;
+        margin-bottom: 10px;
+    }
+    #footer {
+        background: #1E90FF !important;
+        margin-top: 50px;
+    }
 }
