--- a/client/src/components/profile/css/profile.css
+++ b/client/src/components/profile/css/profile.css
@@ -761,3 +761,37 @@ span.tags
     background-repeat: no-repeat;
     background-size: cover;
 }
+.paginate {
+    display: inline-block;
+    padding: 2px;
+    margin: 2px;
+}
+
+.paginate a {
+    text-decoration: none;
+    color: aquamarine !important;
+    float: left;
+    padding: 10px 15px;
+ border: 2px solid aquamarine;
+  margin: 5px 10px;
+}
+
+.paginate .pagination-tag:active {
+    background-color: lightblue;
+    color: lightblue;
+  border-radius: 10px;
+}
+
+.paginate a:hover:not(.active) {
+    background-color: lightgray;
+}
+
+.paginate a:first-child {
+    border-top-left-radius: 10px;
+    border-bottom-left-radius: 10px;
+}
+
+.paginate a:last-child {
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
+}
