wiring up private streaming - wired up group and private messaging - major fixes

--- a/client/src/components/profile/css/individual.css
+++ b/client/src/components/profile/css/individual.css
@@ -4,3 +4,10 @@
 .link-a:hover {
 	cursor: pointer;
 }
+.drop {
+	color: black !important;
+}
+.drop:hover {
+	color: tan !important;
+	cursor: pointer;
+}
