--- a/client/src/components/navigation/style.css
+++ b/client/src/components/navigation/style.css
@@ -124,5 +124,22 @@
 		margin-bottom: 10px;
 	}
 }
-
+@media only screen and (min-width: 410px) and (max-width: 750px) {
+	.notify-drop {
+		width: 100vw !important;
+		min-width: 50vw !important;
+		background-color: white !important;
+		padding: 20px;
+		margin-left: 140px !important;
+		max-height: 500px;
+		overflow-y: scroll;
+		overflow-x: hidden;
+	}
+}
+.dropdown-item:hover {
+	color: black !important;
+}
+.dropdown-item {
+	color: white !important;
+}
 
