private streams wired up - public streams wired up

--- a/client/src/components/navigation/style.css
+++ b/client/src/components/navigation/style.css
@@ -143,3 +143,23 @@
 	color: white !important;
 }
 
+.alert {
+  text-align: center;
+  background-color: #006CFF;
+  color: #fff;
+  padding: 15px;
+}
+
+.alert p {
+  margin: 0;
+}
+
+.alert button {
+  background-color: transparent;
+  border: none;
+  font-size: inherit;
+  color: inherit;
+  margin: 0;
+  padding: 0;
+  text-decoration: underline;
+}
