--- a/client/src/components/streams/private/css/style.css
+++ b/client/src/components/streams/private/css/style.css
@@ -26,7 +26,13 @@
   top: -45px;
 }
 
-
+#back_back {
+  background-image: url(https://mdbootstrap.com/img/Photos/Others/gradient1.jpg);
+  height: 100vh;
+  margin-bottom: -40px;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
 
 input:focus{
   outline: 0 0 0 0  !important;
