wiring up homepage with mongodb live stream information

--- a/client/src/components/common/css/footer.css
+++ b/client/src/components/common/css/footer.css
@@ -10,6 +10,7 @@ section .section-title {
 }
 #footer {
     background: #1E90FF !important;
+    min-height: 730px;
 }
 #footer h5{
 	padding-left: 10px;
