--- a/client/src/components/streams/css/streamShow.css
+++ b/client/src/components/streams/css/streamShow.css
@@ -8,7 +8,7 @@
     border-radius: 0.5rem;
 }
 #fragment_background {
-	background: #87e1ff !important;
+	background: white !important;
 }
 .profile-img{
     text-align: center;
