--- a/client/src/components/streams/css/streamList.css
+++ b/client/src/components/streams/css/streamList.css
@@ -10,12 +10,15 @@
 }
 .background {
 	height: 100%;
+	background-color: black;
 }
 .home-newsletter {
 	padding: 80px 0;
 	background: #f84e77;
 	width: 100vw;
 	margin-left: -20px;
+	margin-bottom: -70px;
+	margin-top: 100px;
 }
 
 .home-newsletter .single {
@@ -46,4 +49,260 @@
 	border-radius: 0 20px 20px 0;
 	background: #243c4f;
 	color: #fff;
+}
+
+.card .thumbnail {
+    border: 0 none;
+    padding: 0;
+    margin: 0;
+    min-height: 270px;
+    position: relative;
+    background: transparent;
+    box-shadow: 8px 8px 8px #871eff;
+}
+
+.card .thumbnail>img {
+    border-radius: 12px 12px;
+    box-shadow: 0 25px 20px -21px rgba(0,0,0,0.57);
+}
+.card .thumb-cover {
+    padding: 15px 20px;
+    height: 100%;
+    top: 0;
+    position: absolute;
+    opacity: 0;
+    display: block;
+    width: 100%;
+    background-color: rgba(0,0,0,0.75);
+    z-index: 3;
+    content: "";
+    left: 0;
+    border-radius: 12px;
+}
+.card .details {
+    background: url(data:image/svg+xml;base64,PD94bWwgdmVyc2lvbj0iMS4wIiA/Pgo8c3ZnIHhtbG5zPSJod…IgaGVpZ2h0PSIxIiBmaWxsPSJ1cmwoI2dyYWQtdWNnZy1nZW5lcmF0ZWQpIiAvPgo8L3N2Zz4=);
+    background: -moz-linear-gradient(top, rgba(0,0,0,0.75) 0%, rgba(0,0,0,0.36) 62%, rgba(0,0,0,0) 100%);
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, rgba(0,0,0,0.75)), color-stop(62%, rgba(0,0,0,0.36)), color-stop(100%, rgba(0,0,0,0)));
+    background: -webkit-linear-gradient(top, rgba(0,0,0,0.75) 0%, rgba(0,0,0,0.36) 62%, rgba(0,0,0,0) 100%);
+    background: -o-linear-gradient(top, rgba(0,0,0,0.75) 0%, rgba(0,0,0,0.36) 62%, rgba(0,0,0,0) 100%);
+    background: -ms-linear-gradient(top, rgba(0,0,0,0.75) 0%, rgba(0,0,0,0.36) 62%, rgba(0,0,0,0) 100%);
+    background: linear-gradient(to bottom, rgba(0,0,0,0.75) 0%, rgba(0,0,0,0.36) 62%, rgba(0,0,0,0) 100%);
+    top: 0;
+    display: block;
+    height: 60px;
+    padding: 10px 15px 0;
+    position: absolute;
+    width: 100%;
+    z-index: 1032;
+    border-radius: 12px 12px 0 0;
+}
+.card .authors-container {
+    display: inline-block;
+    width: 38px;
+}
+.authors-container .author:nth-child(1) {
+    z-index: 100;
+}
+.authors-container .author {
+    float: left;
+    position: relative;
+    transition: opacity 0.25s;
+    -webkit-transition: opacity 0.25s;
+}
+.card .author>.account-photo.account-product-owner {
+    border-color: #ff9500;
+}
+.card .authors-container>.author>.account-photo {
+    width: 36px;
+    height: 36px;
+}
+.authors-container>.author>.account-photo {
+    width: 55px;
+    height: 55px;
+    border-width: 2px;
+}
+.authors-container .author:nth-child(2) {
+    z-index: 99;
+    margin-left: -20px;
+}
+.account-photo.account-product-owner {
+    border-color: rgba(255,149,0,0.55);
+}
+.account-photo {
+    position: relative;
+    width: 70px;
+    height: 70px;
+    display: block;
+    margin: 0 auto;
+    border-radius: 50%;
+    border: 3px solid rgba(0,158,255,0.65);
+    border-color: #ccc;
+}
+.account-photo .mask {
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    display: block;
+    border-radius: 50%;
+}
+.card .thumbnail img {
+    width: 100%;
+
+}
+.card .numbers {
+    color: #FFFFFF;
+    float: right;
+    margin-top: 6px;
+}
+.card .numbers .downloads, .card .numbers .comments-icon {
+    margin-left: 6px;
+    font-size: 15px;
+    font-weight: 500;
+}
+/*.card:hover .thumb-cover, .card:hover .actions {
+    opacity: 1;
+}*/
+.card .thumb-cover {
+    padding: 15px 20px;
+    height: 96%;
+    top: 0;
+    position: absolute;
+    opacity: 0;
+    display: block;
+    width: 100%;
+    background-color: rgba(0,0,0,0.75);
+    z-index: 3;
+    content: "";
+    left: 0;
+    border-radius: 12px;
+}
+.card .actions {
+    position: absolute;
+    z-index: 3;
+    top: 50%;
+    text-align: center;
+    width: 100%;
+    height: 0;
+    opacity: 0;
+    transition: all .5s ease;
+    -webkit-transition: all .5s ease;
+    -moz-transition: all .5s ease;
+}
+.card-info h3 {
+    margin-top: 10px;
+    margin-bottom: 5px;
+    font-size: 18px;
+}
+.card-info [class^='circle-'] {
+    float: left;
+    margin-right: 5px;
+}
+.card-info p {
+    font-size: 14px;
+    margin: 0;
+    color: #666666;
+}
+.card-info {
+    padding: 15px;
+    border-radius: 0 0 12px 12px;
+}
+.card-info a:not(.btn) {
+    color: #434343;
+}
+.circle-red i {
+    color: #FF3B30;
+}
+.card .time {
+    color: #777777;
+    font-size: 15px;
+    margin-top: 2px;
+    text-transform: uppercase;
+}
+a, a:hover, a:focus, .btn:focus, .btn:hover, .btn:active, .btn:active:focus, .btn:active.focus, .btn.active:focus, .btn.active.focus {
+    text-decoration: none;
+    outline: 0;
+    outline-color: transparent;
+    outline-style: none;
+}
+.card .actions .btn {
+    top: 50%;
+    position: relative;
+    transform: translateY(-50%);
+    -webkit-transform: translateY(-50%);
+    -moz-transform: translateY(-50%);
+}
+.btn-neutral.btn-fill {
+    color: #666666;
+    background-color: white;
+    opacity: 1;
+    filter: alpha(opacity=100);
+}
+.btn-neutral {
+    border-color: white;
+    color: white;
+}
+.btn-neutral:not(.btn-fill):hover {
+    color: white;
+}
+.btn-round {
+    border-width: 1px;
+    border-radius: 30px !important;
+    opacity: 0.79;
+    padding: 9px 18px;
+}
+.search {
+  width: 100%;
+  position: relative;
+  display: flex;
+  margin-bottom: 50px;
+}
+
+.searchTerm {
+  width: 100%;
+  border: 3px solid #871eff;
+  border-right: none;
+  padding: 5px;
+  height: 100%;
+  border-radius: 5px 0 0 5px;
+  outline: none;
+  color: #9DBFAF;
+  padding-bottom: 7px;
+}
+
+.searchTerm:focus{
+  color: #00B4CC;
+}
+
+.searchButton {
+  width: 40px;
+  height: 36px;
+  border: 1px solid #871eff;
+  background: #871eff;
+  text-align: center;
+  color: #fff;
+  border-radius: 0 5px 5px 0;
+  cursor: pointer;
+  font-size: 20px;
+}
+
+/*Resize the wrap to see the search bar change!*/
+.wrap{
+  width: 30%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+.custom_wrap {
+	margin-left: 100px;
+}
+
+@media only screen and (max-width: 750px) {
+	.custom_wrap {
+		margin-left: 20px;
+	}
+	.card .thumbnail img {
+	    width: 100%;
+	    height: 100%;
+	}
 }
