--- a/client/src/components/streams/css/streamList.css
+++ b/client/src/components/streams/css/streamList.css
@@ -14,9 +14,8 @@
 }
 .home-newsletter {
 	padding: 80px 0;
-	background: #f84e77;
+	background: #871eff;
 	width: 100vw;
-	margin-left: -20px;
 	margin-bottom: -70px;
 	margin-top: 100px;
 }
@@ -64,10 +63,10 @@
 .card .thumbnail>img {
     border-radius: 12px 12px;
     box-shadow: 0 25px 20px -21px rgba(0,0,0,0.57);
+    height: 100%;
 }
 .card .thumb-cover {
     padding: 15px 20px;
-    height: 100%;
     top: 0;
     position: absolute;
     opacity: 0;
@@ -294,7 +293,7 @@ a, a:hover, a:focus, .btn:focus, .btn:hover, .btn:active, .btn:active:focus, .bt
   transform: translate(-50%, -50%);
 }
 .custom_wrap {
-	margin-left: 100px;
+	
 }
 
 @media only screen and (max-width: 750px) {
