--- a/client/src/components/streams/css/streamShow.css
+++ b/client/src/components/streams/css/streamShow.css
@@ -6,9 +6,13 @@
     margin-top: 3%;
     margin-bottom: 3%;
     border-radius: 0.5rem;
+    background: black !important;
+}
+.profile-head h5, .profile-head h6 {
+    color: #871eff !important;
 }
 #fragment_background {
-	background: white !important;
+	background: black !important;
 }
 .profile-img{
     text-align: center;
@@ -16,6 +20,25 @@
 .profile-img img{
     width: 70%;
     height: 100%;
+    box-shadow: 7px 7px 7px #871eff !important;
+
+}
+.tab-pane label {
+    color: #87e1ff;
+}
+.tab-pane p {
+    color: #871eff !important;
+}
+#home-tab {
+    color: #37be43 !important;
+    background: black;
+    box-shadow: 7px 7px 7px #871eff !important;
+}
+
+#profile-tab {
+    color: #37be43 !important;
+    background: black;
+    box-shadow: 7px 7px 7px #871eff !important;
 }
 .profile-img .file {
     position: relative;
@@ -179,4 +202,40 @@ a.h2{
 #modalll {
 	z-index: 999 !important;
 	position: fixed;
+}
+.search {
+  width: 100%;
+  position: relative;
+  display: flex;
+  margin-bottom: 50px;
+}
+
+.searchTerm {
+  width: 100% !important;
+  border: 3px solid #871eff !important;
+  border-right: none !important;
+  padding: 5px !important;
+  height: 100% !important;
+  border-radius: 5px 0 0 5px !important;
+  outline: none !important;
+  color: #9DBFAF !important;
+  padding-bottom: 7px;
+}
+
+.searchTerm:focus{
+  color: #00B4CC !important;
+}
+#label {
+    color: #37be43 !important;
+}
+.searchButton {
+  width: 40px;
+  height: 36px;
+  border: 1px solid #871eff;
+  background: #871eff;
+  text-align: center;
+  color: #fff;
+  border-radius: 0 5px 5px 0;
+  cursor: pointer;
+  font-size: 20px;
 }
