--- a/client/src/components/streams/private/css/style.css
+++ b/client/src/components/streams/private/css/style.css
@@ -113,7 +113,9 @@ input:focus{
   left:0;
   padding:5px 15px 0 15px;
   text-align:left;
-  background:#fff;
+  background: #37be43;
+  padding-bottom: 30px;
+  margin-bottom: -20px;
   
 }
 
@@ -123,7 +125,7 @@ input:focus{
   height:auto;
   position:relative;
   z-index:10;
-  background:#fff;
+  background: #871eff;
   padding:15px;
   bottom:0px;
   transition: all 0.5s ease;
