sounds on tips wired up - working on private stream page

--- a/client/src/components/profile/css/profile.css
+++ b/client/src/components/profile/css/profile.css
@@ -162,7 +162,7 @@
 }
 
 .hover_card:hover {
-    box-shadow: 7px 7px 7px black !important;
+    box-shadow: 7px 7px 7px #871eff !important;
 }
 .profile 
 {
