wired up BLOCKCHAIN SUCCESSFULLY

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -10,7 +10,7 @@
   background: black;
   border: 3px solid pink !important;
 }
-/* #871eff - purple */
+/* #871eff - purple #37be43 - green */
 .my-4 {
   border-bottom: 3px solid #871eff !important;
 }
