--- a/client/src/components/streams/css/streamShow.css
+++ b/client/src/components/streams/css/streamShow.css
@@ -239,3 +239,49 @@ a.h2{
   cursor: pointer;
   font-size: 20px;
 }
+.custom_tips {
+    list-style-type: none;
+    height: 350px;
+    overflow-y: scroll;
+    border: 3px solid white;
+    box-shadow: 10px 10px 10px #871eff;
+}
+.custom_tips li {
+    background-color: white !important;
+    color: black !important;
+    margin-left: 8px;
+}
+#corner_me {
+    right: 0 !important;
+    bottom: 0 !important;
+    position: fixed;
+    z-index: 99999;
+    width: 500px !important;
+    height: 300px !important;
+}
+#no-corner {
+    position: relative;
+}
+#vid_container {
+    width: 60vw;
+}
+#chattt {
+    width: 35vw;
+}
+@media only screen and (max-width: 750px) {
+    #vid_container {
+        width: 100%;
+        height: 250px;
+    }
+    #chattt {
+        width: 100%;
+    }
+    #corner_me {
+        right: 0 !important;
+        bottom: 0 !important;
+        position: fixed;
+        z-index: 99999;
+        width: 100% !important;
+        height: 200px !important;
+    }
+}
