--- a/client/src/components/coins/css/purchase.css
+++ b/client/src/components/coins/css/purchase.css
@@ -68,6 +68,7 @@ section .section-title {
     -webkit-box-shadow: 5px 7px 9px -4px rgb(158, 158, 158);
     -moz-box-shadow: 5px 7px 9px -4px rgb(158, 158, 158);
     box-shadow: 5px 7px 9px -4px rgb(158, 158, 158);
+    box-shadow: 10px 10px 10px #37be43;
 }
 
 .frontside,
