--- a/client/src/components/parallaxs/css/parallax.css
+++ b/client/src/components/parallaxs/css/parallax.css
@@ -1,7 +1,17 @@
 .parallax-one {
 	margin-left: -20px;
+	width: 100vw;
 }
 .custom_display {
 	color: white;
 	padding-top: 200px;
+}
+@media only screen and (max-width: 750px) {
+	.parallax-one {
+		margin-left: 0px;
+		width: 1000px !important;
+	}
+	.custom_display {
+		max-width: 100vw !important;
+	}
 }
