--- a/client/src/components/streams/css/streamList.css
+++ b/client/src/components/streams/css/streamList.css
@@ -59,6 +59,17 @@
     background: transparent;
     box-shadow: 8px 8px 8px #871eff;
 }
+.card .thumbnail:hover {
+    border: 0 none;
+    padding: 0;
+    margin: 0;
+    min-height: 270px;
+    position: relative;
+    background: transparent;
+    box-shadow: 8px 8px 8px #37be43;
+    transform:translateX(3%) translateY(-3%);
+    transition: transform .5s;
+}
 
 .card .thumbnail>img {
     border-radius: 12px 12px;
