--- a/client/src/components/streams/css/streamShow.css
+++ b/client/src/components/streams/css/streamShow.css
@@ -195,6 +195,9 @@ a.h2{
 #Reloadpage{
     cursor:pointer;
 }
+.modal-body {
+    background-color: #0836bf !important;
+}
 #modal_content {
 	background: black !important;
 	color: white !important;
@@ -202,6 +205,7 @@ a.h2{
 #modalll {
 	z-index: 999 !important;
 	position: fixed;
+    background-color: black !important;
 }
 .search {
   width: 100%;
