--- a/client/src/components/subscribe/css/subscribe.css
+++ b/client/src/components/subscribe/css/subscribe.css
@@ -54,7 +54,7 @@ section.pricing {
   .pricing .card:hover {
     margin-top: -.25rem;
     margin-bottom: .25rem;
-    box-shadow: 0 0.5rem 1rem 0 rgba(0, 0, 0, 0.3);
+    box-shadow: 10px 10px 10px #871eff;
   }
   .pricing .card:hover .btn {
     opacity: 1;
